[tool.poetry]
name = "agent_lite"
version = "0.1.0"
description = ""
authors = ["Saad Attieh <saad@smartrev.ai>"]
readme = "README.md"
include = ["agent_lite/py.typed"]

[tool.poetry.dependencies]
python = "^3.10.0"
anthropic = "^0.21.3"
openai = "^1.14.2"
tiktoken = "^0.6.0"
pydantic-xml = "^2.9.0"
xmltodict = "^0.13.0"
pydantic = "^2.6.4"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-xmltodict = "^0.13.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
