[tool.poetry]
name = "agent_lite"
version = "0.1.0"
description = ""
authors = ["Saad Attieh <saad@smartrev.ai>"]
readme = "readme.md"
include = ["agent_lite/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
anthropic = "^0.25.6"
openai = "^1.14.2"
tiktoken = ">0.6.0,<1.0.0"
pydantic = "^2.6.4"
httpx = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-xmltodict = "^0.13.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
# follow_imports = "silent"